# Bitwyre

./: .gitignore  Answer.txt  CMakeLists.txt  CompilerOptimization.md  PnLAnalysis.md  README.md  REAL_TRADING.md  TradingBotArchitecture.md  collect_futures_data.sh  create_model.py  create_tps_pnl_chart.py  create_tps_pnl_report.py  model_trained_metrics.json  orderbook_data.csv  performance_results.txt  probability_distributions.md  probability_distributions.py  requirements.txt  run_performance_test.sh  run_real_trading.sh  test_bot.sh  test_connection.sh  test_model.py  test_varied_model.sh  train_and_deploy.sh
charts/: tps_pnl_usd_volume_analysis.html
include/bot/: BinanceApiTrader.hpp  TradingBot.hpp
include/model/: TradingModel.hpp
include/orderbook/: OrderbookFetcher.hpp
models/: scaler.pkl
python/: requirements.txt  train_model.py
python/training/: README.md  convert_model.py  create_varied_model.py  improved_model.py  improved_orderbook_model.py  improved_training.py  requirements.txt  retrain_model.py  simplified_orderbook_model.py  test_model.py  train_model.py  update_model_integration.py
src/: CMakeLists.txt  collect_orderbook_data.cpp  main.cpp
src/bot/: BinanceApiTrader.cpp  CMakeLists.txt  TradingBot.cpp
src/model/: CMakeLists.txt  TradingModel.cpp
src/orderbook/: CMakeLists.txt  OrderbookFetcher.cpp
tests/: BotTests.cpp  CMakeLists.txt  ModelTests.cpp  OrderbookTests.cpp
